--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 rocket = {version = "0.5.0-rc.2",  features = ["json"] }
+automerge = { path = "../automerge-rs/automerge" }
+
